@@ -1,1 +1,15 @@
 # 2023_Obrada_slika
+## Image Processing App in Scala
+This application allows you to perform image processing operations on your images. It provides an intuitive user interface that makes it easy to load your own image or load image using URL, apply image processing operations, and save the final result. You can perform common image transformations such as rotation, mirroring, and manipulate the brightness of your image.
+
+## Download and run the app
+Download _obradaslika.jar.part1_ and _obradaslika.jar.part2_ files. Join them (using https://pinetools.com/join-files for example) to get an executable version of the program - _obradaslika.jar_ . Depending on the system, the program can be run as follows:
+- **Linux** - position yourself through the terminal in the directory where the _obradaslika.jar_ file is and run the command `java -jar obradaslika.jar` to start the program. If the app hasn’t opened, run the command `java --module-path $FX-PATH --add-modules javafx.controls -jar obradaslika.jar` instead, where _$FX-PATH_ should be replaced with JavaFX path.
+- **Windows** - position yourself in the directory where the _obradaslika.jar_ file is and double-click on the file to start the program.
+
+To run the program, you need to have Java (and JavaFX, if needed) installed on your computer.
+
+## Authors
+Students of the Faculty of Mathematics in Belgrade:
+- Tijana Jakšić mm19003@alas.matf.bg.ac.rs
+- Irina Šević mr20009@alas.matf.bg.ac.rs
